--- a/src/Components/CSS/Todo.css
+++ b/src/Components/CSS/Todo.css
@@ -1,51 +1,87 @@
-.todo{
-    width: 600px;
+.todo {
+    width: 90%;
+    max-width: 600px;
     min-height: 732px;
     border-radius: 20px;
     background-color: #fff;
     margin: auto;
-    margin-top: 174px;
+    margin-top: 10vh;
     display: flex;
     flex-direction: column;
-    padding: 0px 44px;
+    padding: 20px;
     padding-bottom: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 5vh;
     align-items: center;
 }
-.todo-header{
-    margin-top: 84px;
+
+.todo-header {
+    margin-top: 40px;
     color: #002765;
-    font-size: 36px;
+    font-size: 2.5rem;
     font-weight: 600;
-    line-height: 34px;
+    line-height: 1.2;
 }
-.todo-add{
+
+.todo-add {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 45px;
+    margin-top: 20px;
 }
-.todo-input{
+
+.todo-input {
     border-radius: 50px;
     background-color: #edeef0;
     border: none;
     outline: none;
-    width: 576px;
+    width: 100%;
+    max-width: 576px;
     height: 80px;
     padding-left: 35px;
-    font-size: 20px;
+    font-size: 1.25rem;
+    transition: background-color 0.3s;
 }
-.todo-add-btn{
+
+.todo-input:focus {
+    background-color: #d3d4d6;
+}
+
+.todo-add-btn {
     border-radius: 50px;
     background-color: #ff6739;
-    width: 187px;
+    width: 150px;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: -100px;
+    margin-left: 20px;
     color: #fff;
-    font-size: 26px;
+    font-size: 1.5rem;
     font-weight: 600;
     cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.todo-add-btn:hover {
+    background-color: #e55a33;
+}
+
+/* Media Queries for smaller screens */
+@media (max-width: 768px) {
+    .todo {
+        padding: 0px 10px;
+    }
+
+    .todo-header {
+        font-size: 2rem;
+    }
+
+    .todo-input {
+        font-size: 1rem;
+    }
+
+    .todo-add-btn {
+        width: 100px;
+        font-size: 1.2rem;
+    }
 }
